# probelemsolving

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  dockerfile  pyproject.toml  sync_poetry_precommit.py
api/: __init__.py  main.py
api/routers/: __init__.py  employes.py  products.py
api/utils/: __init__.py  connect_mysql.py  logger.py  utilities.py
database/: dockerfile
docs/source/: api.routers.rst  api.rst  api.utils.rst  modules.rst  sync_poetry_precommit.rst
